# fastapi_project

./: .gitignore  Docker-compose.yaml  Dockerfile  alembic.ini  pyproject.toml  pytest.ini  readme.md  requirements.txt  test.py
.github/workflows/: python-app.yml  tests.yaml  tests.yml
app/config/: __init__.py  base.py
app/db/postgresql/: base.py  crud.py  decorators.py  models.py
app/db/postgresql/migrations/: env.py
app/db/postgresql/migrations/versions/: 09cf22b8a3c4_init_migr.py  130e771e7238_init_migr.py  35ffb602f4b8_init_migr.py  41cd8f347dce_.py  cae2a1f29ee8_.py  (+7 more)
app/entrypoints/: main.py
app/modules/products/base/: schemas.py  service.py
app/modules/products/brands/: dependencies.py  schemas.py  service.py
app/modules/products/categories/: dependencies.py  schemas.py  service.py
app/modules/products/collections/: dependencies.py  schemas.py  service.py
app/modules/products/colors/: dependecies.py  dependencies.py  schemas.py  service.py
app/modules/products/crud/: base.py  models.py
app/modules/products/models/: dependencies.py  service.py
app/modules/products/tasks/: __init__.py  celery.py  tasks.py
app/modules/products/utils/: __init__.py  download.py
app/routers/: __init__.py
app/routers/api_v1/: endpoints.py
runtime/bitnami/redis/data/: appendonly.aof
sql/: create_database.sql
tests/: conftest.py
tests/endpoints/products/base/: model.py
tests/endpoints/products/brands/: new_one.py  tests.py
tests/endpoints/products/categories/: tests.py
tests/endpoints/products/collections/: tests.py
tests/endpoints/products/colors/: tests.py
tests/endpoints/products/data/: data.json
tests/fixtures/: products.py
tests/utils/: assertions.py
(+23 files in other folders)
